# circle_dance_2

./: ARCHITECTURE.md  AUDIO_THEORY.md  CUSTOM_VISUALIZATION.md  README.md  TROUBLESHOOTING.md  find_device.py  pyproject.toml  run.sh  run_v2.sh  user_presets.json
.github/: copilot-instructions.md
legacy/older_01/: Detector.md  Visualization.md  audio_engine.py  audio_engine_2.py  detector.py  engine_and_viz.md  find_monitor.py  v_bars.py  v_circular_compas.py  v_sonic_radar.md  v_sonic_radar.py  v_sonic_radar_2.py  v_sonic_radar_3.py  v_sonic_radar_4.py  viz_01.py  viz_02.py  vizp_01.py
legacy/older_02/: audio_engine copy.py  audio_engine.py  audio_engine_v1.py  audio_engine_v2.py  audio_engine_v3.py  audio_engine_v4.py  improvement_plan.md  live_attack_radar copy.py  live_attack_radar.py  live_attack_radar_v1.py  live_attack_radar_v2.py  live_attack_radar_v3.py  live_attack_radar_v4.py  run.sh  run_v1.sh
legacy/older_03/: README.md  audio_engine.py  live_attack_radar.py
src/note_dancer/: README.md  config.py  protocol.py
src/note_dancer/engine/: adjustable_paramters.md  analyzer.py  debug_monitor.py  features.md  main.py  plan_01.md  stream.py  transmitter.py
src/note_dancer/engine_v2/: adjustable_paramters.md  analyzer.py  command_listener.py  debug_monitor.py  frontend_parameters.md  main.py  note_detection_discussion.md  plan_02.md  plan_parameters.md  stream.py  transmitter.py
src/note_dancer/visualization/: README.md
src/note_dancer/visualization/base/: audioviz.py  hud copy.py  hud.py  parameters.py  receiver.py
src/note_dancer/visualization/cli/: cli.py
(+20 files in other folders)
