[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "note-dancer"
version = "0.1.0"
description = "Real-time audio analysis and visualization"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Oskar Maier", email = "oskar.maier@gmail.com" }]
keywords = ["audio", "visualization", "bpm", "chroma", "music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = ["pyaudio", "numpy", "librosa", "aubio", "pygame"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
audio-engine = "note_dancer.engine.main:run_engine"
viz-cli = "note_dancer.visualization.cli.cli:run"
viz-simple = "note_dancer.visualization.dashboard.dashboard:run"
viz-radar = "note_dancer.visualization.radar.radar:run"
viz-monolith = "note_dancer.visualization.monolith.monolith:run"
viz-snake = "note_dancer.visualization.snake.snake:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["note_dancer*"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I"] # Enable standard linting rules (Pyflakes, pycodestyle)
